# forum-actix-web

./: .gitattributes  README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 0001_create_users_table.up.sql  0002_create_posts_table.up.sql  0003_create_comments_table.up.sql  0004_create_markdowns_table.down.sql  0004_create_markdowns_table.up.sql  0005_create_friends_table.down.sql  0005_create_friends_table.up.sql  0006_create_friends_requests_table.down.sql  0006_create_friends_requests_table.up.sql  20240627155141_create_users_table.sql  20240627155237_create_posts_table.sql  20240627162742_create_comments_table.sql  20240628015448_create_follows_table.sql  20240628114652_add_username_passwd_to_users.sql  20240712083637_alter_posts_time_table.sql  20240712101018_alter_comments_time_table.sql  20240712101112_alter_users_time_table.sql  20240716103455_create_markdown_table.sql  20240716103455_create_md_time_table.sql  20240716141540_alter_md_images_table.sql  20240726123730_create_friends_table.sql  20240726123740_create_friends_requests_table.sql
backend/src/: import.rs  lib.rs  main.rs
backend/src/chat/: chat_server.rs  chat_session.rs  handlers.rs  mod.rs
backend/src/dbadmin/: mod.rs  model.rs  reqres.rs
backend/src/dbadmin/handlers/: comment.rs  login.rs  markdown.rs  mod.rs  post.rs  register.rs  user.rs
frontend/: .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vue.config.js
frontend/src/: axiosConfig.ts  main.ts  shims-v-md-editor.d.ts  shims-vue.d.ts
(+24 files in other folders)
