[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
actix-multipart = "0.4"
actix-files = "0.6"
futures = "0.3" # 添加 futures crate

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "time"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
actix-cors = "0.7.0"

[dev-dependencies]
sqlx-cli = { version = "0.6", features = ["postgres"] }
